Fix <code> overflowing.

--- a/theme/style.css
+++ b/theme/style.css
@@ -31,6 +31,7 @@ code {
   display: block;
   background-color: rgb(230, 230, 230);
   padding: 15px;
+  overflow: auto;
 }
 
 a {
